@@ -135,7 +135,10 @@ module.exports = function (Server) {
                         return;
                     ActionLog.record(user.ip, user.name, "acp-channel-unload");
                     c.initialized = data.save;
-                    c.users.forEach(function(u) {
+                    // copy the list of users to prevent concurrent
+                    // modification
+                    var users = Array.prototype.slice.call(c.users);
+                    users.forEach(function (u) {
                         c.kick(u, "Channel shutting down");
                     });
 
