@@ -862,10 +862,8 @@ Channel.prototype.kick = function(user, reason) {
     user.socket.emit("kick", {
         reason: reason
     });
-    if(user.socket.disconnected) {
-        this.userLeave(user);
-    }
     user.socket.disconnect(true);
+    user.channel = null;
 }
 
 Channel.prototype.hideIP = function(ip) {
