@@ -1,3 +1,10 @@
+Mon Sep  9 22:10 2013 CDT
+    * lib/acp.js: Change acp-channel-unload callback to duplicate the list
+      of users in the channel to prevent concurrent modification while
+      kicking
+    * lib/channel.js: As an extra precaution, set user.channel = null after
+      kicking a user
+
 Sun Sep  8 17:41 2013 CDT
     * lib/server.js: Change behavior of unloadChannel - deletes all object
       keys in the channel object and then sets channel.dead = true
